--- a/src/components/leaderboard.css
+++ b/src/components/leaderboard.css
@@ -10,6 +10,13 @@
 
 }
 
+p{
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 .mobile-row-title{
     text-align: center;
     font-weight: 700;
@@ -47,7 +54,6 @@
 
 .justify-between-grid{
     display: grid;
-    justify-content: space-between;
 
 }
 
@@ -84,4 +90,15 @@
     margin-top: 10px;
     border: 1px solid #979797;
 
+}
+
+.day-title{
+    text-align: center;
+    font-weight: 700;
+    margin-top: 10px;
+    padding: 0;
+}
+
+.body-desktop{
+    font-family: Arial, Helvetica, sans-serif;
 }
